# tree-sitter-flamingo

./: .editorconfig  .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.git-template/hooks/: pre-commit
.github/workflows/: format.yml  test.yml
bindings/c/: tree-sitter-flamingo.h  tree-sitter-flamingo.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_flamingo/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterFlamingoTests/: TreeSitterFlamingoTests.swift
examples/: aqua_build.fl  bob.fl  iar_build.fl  std.fl
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
src/tree_sitter/: alloc.h  array.h  parser.h
test/corpus/: access.txt  access_list.txt  anon_function.txt  assert.txt  assignment.txt  call.txt  class_declaration.txt  comment.txt  comments_in_maps_regression.txt  for.txt  function_declaration.txt  if.txt  import.txt  index.txt  let.txt  map.txt  mutliline.txt  nothing.txt  number.txt  operations.txt  print.txt  proto.txt  qualifiers.txt  return.txt  slice.txt  unary.txt  vec.txt
