[package]
name = "tree-sitter-flamingo"
description = "flamingo grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "flamingo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-flamingo"
edition = "2018"
license = "ASL"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
